2006-02-03  Alexander Olk  <alex.olk@googlemail.com>

	* FileDialog.cs: First part of fix for #77464

2006-02-03  Alexander Olk  <alex.olk@googlemail.com>

	* ButtonBase.cs, ContainerControl.cs, Forms.cs,
	  ThemeWin32Classic.cs: Fix for #77458. Correct handling of
	  AcceptButton border drawing.

2006-02-03  Peter Dennis Bartok  <pbartok@novell.com> 

	* Form.cs: Moved positioning of form after auto scaling is applied,
	  otherwise it would possibly use wrong form size.

2006-02-03  Peter Dennis Bartok  <pbartok@novell.com>

	* Control.cs (RecreateHandle): No need to re-create any child
	  controls, the child windows will get destroyed automatically by
	  the windowing system or driver, and re-created when the handle
	  is being accessed the first time. Fixes #77456
	* Form.cs: No longer setting the form to closing if the handle is 
	  being recreated. This seems like the right thing to do, don't
	  have a bug or testcase for this, though.

2006-02-02  Peter Dennis Bartok  <pbartok@novell.com>

	* FileDialog.cs: Suspend/Resume layouting when changing sizes of
	  controls to avoid unwanted side effects

2006-02-02  Peter Dennis Bartok  <pbartok@novell.com> 

	* Control.cs: 
	  - ScaleCore needs to scale the bounds, not the ClientSize of the 
	    control. Fixes #77416.
	  - DefaultSize is 0,0 for control
	* TextBoxBase.cs: 
	  - DefaultSize is 100, 20
	  - SetBoundsCore: Now enforcing the height, no matter if the provided
	    height is more or less than the preferred one, as long as AutoSize
	    is on
	* Form.cs: Apply documented fudge factor. Part of item 3 fix for #77416

2006-02-02  Peter Dennis Bartok  <pbartok@novell.com>

	* Control.cs:
	  - ResumeLayout: Fixed logic when to call PerformLayout, we may not
	    call unless both performLayout is true *and* we have a pending
	    layout change
	  - ResumeLayout: MS does not completely nest Suspend and Resume,
	    they bottom out at 0, fixed our code to match that.